# topology-api

./: Doxyfile  README.md  example.cpp  meson.build
.github/workflows/: run_tests.yml
docs/: annotated.html  classes.html  classtopology_1_1Device-members.html  classtopology_1_1Device.html  classtopology_1_1Device__coll__graph.map  classtopology_1_1Device__coll__graph.md5  classtopology_1_1Device__inherit__graph.map  classtopology_1_1Device__inherit__graph.md5  classtopology_1_1Nmos-members.html  classtopology_1_1Nmos.html  classtopology_1_1Nmos__coll__graph.map  classtopology_1_1Nmos__inherit__graph.md5  classtopology_1_1Resistor-members.html  classtopology_1_1Resistor.html  classtopology_1_1Resistor__coll__graph.map  classtopology_1_1Resistor__coll__graph.md5  classtopology_1_1Topology-members.html  classtopology_1_1Topology.html  classtopology_1_1TopologyList-members.html  classtopology_1_1TopologyList.html  classtopology_1_1TopologyList__coll__graph.map  classtopology_1_1TopologyList__coll__graph.md5  classtopology_1_1Topology__coll__graph.map  classtopology_1_1Topology__coll__graph.md5  device_8cpp.html  device_8cpp__incl.map  device_8cpp__incl.md5  device_8hpp.html  device_8hpp__dep__incl.map  device_8hpp__dep__incl.md5  device_8hpp__incl.map  device_8hpp__incl.md5  device_8hpp_source.html  dir_000001_000002.html  dir_000003_000002.html  dir_0ae5fd04a9b991f2c376fafa197d3147.html  dir_0ae5fd04a9b991f2c376fafa197d3147_dep.map  dir_0ae5fd04a9b991f2c376fafa197d3147_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  (+72 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_1.js  classes_2.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  related_0.js  searchdata.js  typedefs_0.js  variables_0.js
html/: annotated.html  classes.html  classtopology_1_1Device-members.html  classtopology_1_1Device.html  classtopology_1_1Topology-members.html  classtopology_1_1Topology.html  classtopology_1_1TopologyList-members.html  classtopology_1_1TopologyList.html  device_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  topologyAPI_8hpp_source.html  topologyIO_8hpp_source.html  topologyList_8hpp_source.html  topology_8hpp_source.html  topology__api_8hpp_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  classes_1.js  functions_1.js  functions_3.js  functions_5.js  searchdata.js
include/: device.hpp  meson.build  topology.hpp  topologyAPI.hpp  topologyIO.hpp  topologyList.hpp
include/devices/: nmos.hpp  resistor.hpp
src/: device.cpp  meson.build  topology.cpp  topologyAPI.cpp  topologyIO.cpp  topologyList.cpp
src/devices/: nmos.cpp  resistor.cpp
test/: meson.build  test.cpp  test.h  testDevice.cpp  testTopology.cpp  testTopologyIO.cpp  testTopologyList.cpp
test/topologies/: ex3.json  ex4.json  ex5.json  testTopologyIO_output.json
